fix buttons_group wrap

--- a/src/ui/buttons_group/buttons_group.module.scss
+++ b/src/ui/buttons_group/buttons_group.module.scss
@@ -1,6 +1,7 @@
 @import '../../assets/sass/index.scss';
 .kui-buttons_group {
     display: flex;
+    flex-wrap: wrap;
     margin-top: -$google-spacing;
     margin-left: -$google-spacing;
 
